--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="author" content="Usheninte Dangana">
+    <meta name="description" content=">LCU Fashion & Lifestyle Academy, is the first of its kind in Ibadan. We have a well-tailored curriculum, training workshops by seasoned professionals, a conducive learning centre and lots more. ">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -19,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>LCU Fashion & Lifestyle Academy</title>
   </head>
   <body>
     <noscript>
