--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta name="author" content="Usheninte Dangana">
-    <meta name="description" content=">Lead City Fashion & Lifestyle Academy, is the first of its kind in Ibadan. We have a well-tailored curriculum, training workshops by seasoned professionals, a conducive learning centre and lots more. ">
+    <meta name="description" content=">Lead City Fashion & Lifestyle Academy, is the first of its kind in Ibadan. We have a well-tailored curriculum, training workshops by seasoned professionals, a conducive learning centre and lots more.">
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
