--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#000000">
     <meta name="author" content="Usheninte Dangana">
     <meta name="description" content=">Lead City Fashion & Lifestyle Academy, is the first of its kind in Ibadan. We have a well-tailored curriculum, training workshops by seasoned professionals, a conducive learning centre and lots more.">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!--
