--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta name="author" content="Usheninte Dangana">
-    <meta name="description" content=">Lead City Fashion & Lifestyle Academy, is the first of its kind in Ibadan. We have a well-tailored curriculum, training workshops by seasoned professionals, a conducive learning centre and lots more.">
+    <meta name="description" content=">Our mission is to provide quality education & training conducive to the optimal development of each student by ensuring individual attention and committment to learners, in order to maximise their unique potential and equip them to enter the fashion industry in any field with confidence, except knowledge and skill.
+
+    ">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
     <!-- FontAwesome -->
